--- a/evolution-chess-2-alfa/evolutino-chess.html
+++ b/evolution-chess-2-alfa/evolutino-chess.html
@@ -209,7 +209,7 @@
 <body>
 
     <h1>Шахматы: Эволюция Фигур V2.6</h1>
-    <div class="subtitle">Статуи, Бессмертие и Умные Призраки</div>
+    <div class="subtitle">made by shrechochek</div>
 
     <div class="game-container">
         <div id="board"></div>
