delete debug logs

--- a/evolution-chess-2-alfa/evolutino-chess.html
+++ b/evolution-chess-2-alfa/evolutino-chess.html
@@ -726,8 +726,8 @@ function makeMove(fromX, fromY, move) {
     else if(!target) {
         board[fromY][fromX] = null;
     }
-    log(fromY);
-    log(fromX);
+    // log(fromY);
+    // log(fromX);
     piece.hasMoved = true;
 
     // РОКИРОВКА (Перемещение ладьи)
