update statue shadow

--- a/evolution-chess-2-alfa/evolutino-chess.html
+++ b/evolution-chess-2-alfa/evolutino-chess.html
@@ -94,9 +94,9 @@
         }
 
         /* Эффект для бессмертных фигур */
-        .piece.immortal img {
+        /* .piece.immortal img {
             filter: drop-shadow(0 0 8px #9b59b6);
-        }
+        } */
 
         /* Бейджик уровня */
         .lvl-badge {
