update some names

--- a/evolution-chess-2-alfa/evolution-chess.html
+++ b/evolution-chess-2-alfa/evolution-chess.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Шахматы с Эволюцией: SVG версия + MODS (Fixed Castling)</title>
+    <!-- <title>Шахматы с Эволюцией: SVG версия + MODS (Fixed Castling)</title> -->
+    <title>Шахматы с Эволюцией</title>
     <style>
         :root {
             --bg-color: #2c3e50;
@@ -243,8 +244,10 @@
 </head>
 <body>
 
-    <h1>Шахматы: Эволюция Фигур V3</h1>
-    <div class="subtitle">made by shrechochek (Fixed Castling)</div>
+    <!-- <h1>Шахматы: Эволюция Фигур V3</h1> -->
+    <h1>Шахматы c эволюцией</h1>
+    <!-- <div class="subtitle">made by shrechochek (Fixed Castling)</div> -->
+    <div class="subtitle">made by shrechochek</div>
 
     <div class="game-container">
         <div id="board"></div>
